; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_sleh_irq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_sleh_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32* }
%struct.TYPE_4__ = type { i32 (i32, i32, i32, i32)*, i32, i32, i32, i32 }

@DBG_INTR_TYPE_OTHER = common dso_local global i32 0, align 4
@EntropyData = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@ENTROPY_BUFFER_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sleh_irq(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  store i32 0, i32* %4, align 4
  store i32* null, i32** %5, align 8
  store i32* null, i32** %6, align 8
  %8 = call %struct.TYPE_4__* (...) @getCpuDatap()
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %7, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @DBG_INTR_TYPE_OTHER, align 4
  %11 = call i32 @sleh_interrupt_handler_prologue(i32* %9, i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** %13, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 %14(i32 %17, i32 %20, i32 %23, i32 %26)
  %28 = call i64 (...) @ml_get_timebase()
  store i64 %28, i64* %3, align 8
  %29 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @EntropyData, i32 0, i32 0), align 8
  store i32* %29, i32** %5, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 1
  store i32* %31, i32** %6, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @EntropyData, i32 0, i32 1), align 8
  %34 = load i64, i64* @ENTROPY_BUFFER_SIZE, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = icmp uge i32* %32, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %1
  %38 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @EntropyData, i32 0, i32 1), align 8
  store i32* %38, i32** %6, align 8
  br label %39

39:                                               ; preds = %37, %1
  %40 = load i32*, i32** %6, align 8
  store i32* %40, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @EntropyData, i32 0, i32 0), align 8
  %41 = load i32*, i32** %5, align 8
  %42 = load i32, i32* %41, align 4
  store i32 %42, i32* %4, align 4
  %43 = load i64, i64* %3, align 8
  %44 = trunc i64 %43 to i32
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @__ror(i32 %45, i32 9)
  %47 = xor i32 %44, %46
  %48 = load i32*, i32** %5, align 8
  store i32 %47, i32* %48, align 4
  %49 = call i32 (...) @sleh_interrupt_handler_epilogue()
  ret void
}

declare dso_local %struct.TYPE_4__* @getCpuDatap(...) #1

declare dso_local i32 @sleh_interrupt_handler_prologue(i32*, i32) #1

declare dso_local i64 @ml_get_timebase(...) #1

declare dso_local i32 @__ror(i32, i32) #1

declare dso_local i32 @sleh_interrupt_handler_epilogue(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
